maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:77: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime13.JediEscaper
    setDirection(direction.EAST)
                 ^